--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "noImplicitAny": false,
@@ -16,8 +20,16 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react-jsx"
   },
-  "include": ["src", "./src/**/*.tsx", "jest.setup.js", "svgMock.js"],
-  "typeRoots": ["../node_modules/@types", "../@types"]
+  "include": [
+    "./src/**/*.ts",
+    "./src/**/*.tsx",
+    "jest.setup.js",
+    "svgMock.js"
+  ],
+  "typeRoots": [
+    "../node_modules/@types",
+    "../@types"
+  ]
 }
